--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
-          <form action="https://formspree.io/f/xyylngw" method="POST">
+          <form action="https://formspree.io/f/mwkynrop" method="POST">
             <div class="form-control">
               <label for="name">Name</label>
               <input
@@ -240,28 +240,28 @@
     </section>
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://twitter.com/MitchellWMaina?t=b2sSvWKTvXcOlIdOIxa5Tw&s=08" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://instagram.com/mitchellwmaina?utm_medium=copy_link" target="_blank"
         ><img
           src="assets/icons/icons8-instagram.gif"
           alt="Instagram"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.linkedin.com/in/mitchell-maina-b5b834170" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://github.com/mitchellshera" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
     <!-- Footer section -->
@@ -271,7 +271,7 @@
       <p class="copy">&copy; Copyright 2022</p>
       <p class="copy">
         Built with &#x2661; by
-        <a href="https://twitter.com/koladechris" target="_blank"
+        <a href="https://twitter.com/MitchellWMaina?t=b2sSvWKTvXcOlIdOIxa5Tw&s=08" target="_blank"
           >Mitchell Wachera</a
         >
       </p>
