--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        My journey, 2 years in, which began in 2020 , has taken her through varied, intensive and demanding projects that have sharpened her skills, acquiring in-depth knowledge in architecting, creating, testing and debugging high quality secure web applications.
+        My journey, 2 years in, which began in 2020 , has taken me through varied, intensive and demanding projects that have sharpened my skills, acquiring in-depth knowledge in architecting, creating, testing and debugging high quality secure web applications.
 
       </p>
       
