--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/Screenshot (30)_LI.jpg"
+      href="assets/icons/M.png"
     />
 
     <!-- Animate CSS CDN -->
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Mitchell Wachera | Web Developer</title>
+    <title>Mitchell Wachera | Software Engineer</title>
   </head>
 
   <body>
@@ -46,7 +46,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/my business pic.jpg"
+        src="assets/images/my business pc.jpeg"
         alt="jane-doe"
         loading="lazy"
         class="hero-img"
@@ -54,7 +54,8 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          My name is Mitchell Wachera. I am a web programmer. My passion for computers started when i was a child, from trying to fix electronics, to starting to learn how to use Microsoft word and Excel, to where I am right now writing code and being a great programmer. My level of professionalism is top-notch and I'm very hard working. This is absolutely the best job ever.
+          My name is Mitchell Wachera.I am a Motivated and dedicated software engineering enthusiast with a strong passion for creating innovative solutions.My love for technology knows no bounds.My passion for computers started when I was a child, from trying to fix electronics, to starting to learn how to use Microsoft word and Excel, to where I am right now writing code. My level of professionalism is top-notch and I'm very hard working because of this. I am generally a very curious and innovative person so this career path is the best fit for me.
+        </p>
         </p>
       </div>
     </section>
@@ -62,7 +63,7 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        My journey, 2 years in, which began in 2020 , has taken me through varied, intensive and demanding projects that have sharpened my skills, acquiring in-depth knowledge in architecting, creating, testing and debugging high quality secure web applications.
+        I have 3 years worth of experience as a web developer and a year as a software engineer. I am currently enrolled in the ALX Software Engineering program, where I am acquiring in-depth knowledge and practical skills in various software development technologies. I hold a Bachelor of Arts degree in Economics with a minor in Psychology from Kenyatta University. Additionally, I have completed the CS50 Web Programming with Python and JavaScript course at Harvard University through edX.My journey has taken me through varied, intensive and demanding projects that have sharpened my skills, acquiring in-depth knowledge in architecting, creating, testing and debugging high quality secure web applications.
 
       </p>
       
@@ -80,7 +81,19 @@
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-css3.svg"
+            src="assets/icons/icons8-c.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/mysql.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/css.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
@@ -97,17 +110,18 @@
             loading="lazy"
             class="icon icon-card"
           />
-          <img
-            src="assets/icons/python-seeklogo.com.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
+          
         </div>
 
         <div class="second-set animate__animated animate__pulse">
           <img
-            src="assets/icons/icons8-bootstrap.svg"
+            src="assets/icons/linux.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/python-3.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
@@ -119,7 +133,7 @@
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-git.svg"
+            src="assets/icons/git.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
@@ -145,7 +159,7 @@
       <div class="projects-container">
         <div class="project-container project-card">
           <img
-            src="assets/images/auctions/Screenshot (13).png"
+            src="assets/images/auctions/Screenshot (9).png"
             alt="expense-tracker"
             loading="lazy"
             class="project-pic"
@@ -159,31 +173,31 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/email/Screenshot (3).png"
+            src="assets/images/email/2.png"
             alt="netflic-clone"
             loading="lazy"
             class="project-pic"
           />
-          <h3 class="project-title">E-mail</h3>
+          <h3 class="project-title">Social Media Site</h3>
           <p class="project-details">
-            This is a front-end for an email client that makes API calls to send and receive emails.
+            HobbyHub is a web app that helps you find people who share your hobbies and interests. With HobbyHub, you can connect with other hobbyists, exchange messages, and make new friends.
 
           </p>
-          <a href="https://github.com/mitchellshera/email-website" target="_blank" class="project-link">Check it Out</a>
+          <a href="https://github.com/mitchellshera/Social-Media-site" target="_blank" class="project-link">Check it Out</a>
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/fashion/Screenshot (22).png"
+            src="assets/images/fashion/ifrica.png"
             alt="greeny-earth"
             loading="lazy"
             class="project-pic"
           />
-          <h3 class="project-title">Fashion Site</h3>
+          <h3 class="project-title">E-commerce Site</h3>
           <p class="project-details">
-            This project is about Womens fashion. The two categories; Professional and Casual. 
+            This project is an E-commerce wbsite,it is for African Merchandise exports, made with python and django. 
 
           </p>
-          <a href="https://github.com/mitchellshera/fashion" target="_blank" class="project-link">Check it Out</a>
+          <a href="https://github.com/mitchellshera/ifrica.git" target="_blank" class="project-link">Check it Out</a>
         </div>
       </div>
     </section>
@@ -240,7 +254,7 @@
     </section>
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="https://twitter.com/MitchellWMaina?t=b2sSvWKTvXcOlIdOIxa5Tw&s=08" target="_blank"
+      <a href="https://twitter.com/MitchellWachera?t=0qbnycO7qZ-5HQq0D-C8Rg&s=09" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
@@ -254,7 +268,7 @@
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="https://www.linkedin.com/in/mitchell-maina-b5b834170" target="_blank"
+      <a href="https://www.linkedin.com/in/mitchell-wachera-b5b834170" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
@@ -268,7 +282,7 @@
     <section
     >
     <footer>
-      <p class="copy">&copy; Copyright 2022</p>
+      <p class="copy">&copy; Copyright 2023</p>
       <p class="copy">
         Built with &#x2661; by
         <a href="https://twitter.com/MitchellWMaina?t=b2sSvWKTvXcOlIdOIxa5Tw&s=08" target="_blank"
