--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <p class="copy">&copy; Copyright 2023</p>
       <p class="copy">
         Built with &#x2661; by
-        <a href="https://twitter.com/MitchellWMaina?t=b2sSvWKTvXcOlIdOIxa5Tw&s=08" target="_blank"
+        <a href="https://twitter.com/MitchellWachera?t=0qbnycO7qZ-5HQq0D-C8Rg&s=09" target="_blank"
           >Mitchell Wachera</a
         >
       </p>
