--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
     </section>
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
+    <a href="https://drive.google.com/file/d/18KfWXIw0LumY2fTV-fjYMM4htXHWbdS9/view?usp=drive_link" target="_blank"
+        ><img
+          src="assets/icons/resume.png"
+          alt="cv"
+          loading="lazy"
+          class="socicon"
+      /></a>
+
       <a href="https://twitter.com/MitchellWachera?t=0qbnycO7qZ-5HQq0D-C8Rg&s=09" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
